<resources>
    <string name="app_name">Student Banter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register Now</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_screen_name">Screen Name</string>
    <string name="create_account">Create Account</string>
    <string name="invalid_login">Email address or password is incorrect</string>
    <string name="required_field">Required Field</string>
    <string name="tutorial_code">Tutorial Code</string>
    <string name="question_board_heading">Question Board</string>
    <string name="resource_hub_heading">Resource Hub</string>
    <string name="subject_of_post">Subject</string>
    <string name="post_question_text">Please enter your question</string>
    <string name="number_of_replies">Number of replies: </string>
    <string name="delete_post">Delete</string>
    <string name="example_question_long">This is the question text. This could be quite long as it needs to describe what the user is having troubles with. Trying to make the text reasonably long to see what a longer question would look like on the screen.</string>
    <string name="question_heading">Question:</string>
    <string name="reply">reply</string>
    <string name="reply_heading">Reply:</string>
    <string name="replies_heading">Replies:</string>
    <string name="description_of_resource">Description of Resource</string>
    <string name="hyperlink_hint">Hyperlink</string>
    <string name="resource_invalid_error">Please enter a valid hyperlink - must include http or https prefix</string>
</resources>
