<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="com.mouzakis.arisurfacepro.studentmessagingapplication.SeeRepliesToPostActivity">

    <TextView
        android:id="@+id/postee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ari Mouzakis"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1/1/2000"
        android:layout_toLeftOf="@+id/post_time"
        android:layout_marginRight="6dp"/>

    <TextView
        android:id="@+id/post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="9:00am"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>


    <TextView
        android:id="@+id/post_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Margin vs Padding!"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/postee_name"
        android:layout_marginBottom="6dp"/>


    <Button
        android:id="@+id/delete_post_button"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:text="@string/delete_post"
        android:textStyle="italic"
        android:textSize="10sp"
        android:layout_below="@+id/post_heading"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/question_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_heading"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_below="@+id/delete_post_button"/>

    <TextView
        android:id="@+id/question_text"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/example_question_long"
        android:layout_below="@+id/question_heading"
        android:fontFamily="serif"/>

    <Button
        android:id="@+id/reply_to_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reply"
        android:layout_below="@+id/question_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/replies_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/replies_heading"
        android:layout_below="@+id/reply_to_post_button"
        android:textStyle="bold"/>

    <ListView
        android:layout_margin="12dp"
        android:id="@+id/post_replies_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/replies_heading"/>


</RelativeLayout>
